force-app/main/default/objects/Chargent_Error_Code__mdt/Chargent_Error_Code__mdt.object-meta.xml
<CustomObject>
    <label>Chargent Error Code</label>
    <pluralLabel>Chargent Error Codes</pluralLabel>
</CustomObject>