force-app/main/default/objects/Chargent_Error_Code__mdt/fields/Error_ID__c.field-meta.xml
<CustomField>
    <fullName>Error_ID__c</fullName>
    <label>Error ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>