force-app/main/default/objects/Chargent_Error_Code__mdt/fields/Technical_Message__c.field-meta.xml
<CustomField>
    <fullName>Technical_Message__c</fullName>
    <label>Technical Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>