force-app/main/default/objects/Chargent_Error_Code__mdt/fields/User_Message__c.field-meta.xml
<CustomField>
    <fullName>User_Message__c</fullName>
    <label>User Message</label>
    <type>TextArea</type>
</CustomField>